--- a/.github/workflows/alive.yml
+++ b/.github/workflows/alive.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: gohomo/login_serv@master # using the workflow with default settings
+      - uses: gohomo/login_serv00@master # using the workflow with default settings
